[package]
name = "do-you-wanna-build-a-snowman"
version = "0.1.0"
authors = ["Willow <willow.ch@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dywbas"
path = "src/main.rs"

[dependencies]
rayon = "1.5.0"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[profile.bench	]
lto = true
panic = 'abort'
codegen-units = 1
